@@ -44,9 +44,10 @@ by Nicolas Chopin and Omiros Papaspiliopoulos.
   on different CPU cores). 
 
 * **Variance estimators** (Chan and Lai, 2013 ; Lee and Whiteley, 2018; Olsson
-  and Douc, 2019)
+  and Douc, 2019).
 
-* **nested sampling** (basic, experimental). 
+* **nested sampling**: both the vanilla version and the SMC sampler of Salomone
+  et al (2018).
 
 ## Example ##
 
